fix: table alignment

--- a/src/components/TableHeader/TableHeader.scss
+++ b/src/components/TableHeader/TableHeader.scss
@@ -5,14 +5,16 @@
 
 .table-header {
   display: none;
+  width: 100%;
 
   @include tablet {
     display: flex;
     flex-direction: row;
-    padding: 0 1rem;
+    padding: 0 1.5rem;
     background-color: $color-bg-light-grey;
 
     &__item {
+      width: 100%;
       text-transform: uppercase;
       display: flex;
       align-items: center;
@@ -20,10 +22,31 @@
       color: $color-secondary-slate;
       font-weight: 600;
       flex-grow: 1;
+      flex-basis: 0;
 
       &__contact-information {
         min-width: 9.375rem;
       }
+
+      &--actions {
+        justify-content: right;
+        flex-grow: 0;
+      }
+
+      // &--first {
+      //   justify-content: flex-start;
+      //   flex-grow: 0;
+      // }
+
+      // &--other {
+      //   justify-content: flex-start;
+      //   flex-grow: 1;
+      // }
+
+      // &--category {
+      //   min-width: 15%;
+      //   width: 50%;
+      //   }
     }
 
     &__sort-icon {
